--- a/helm-chart/templates/service.yaml
+++ b/helm-chart/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Values.serviceName }}
   labels:
-    app: python
+{{- include "commonLabels" . | nindent 4 }}
 spec:
   type: {{ .Values.serviceType }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: python
+{{- include "commonLabels" . | nindent 4 }}
