--- a/helm-chart/templates/serviceaccount.yaml
+++ b/helm-chart/templates/serviceaccount.yaml
@@ -3,5 +3,5 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount }}
   labels:
-    app: python
+{{- include "commonLabels" . | nindent 4 }}
 
