--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: python-app
-  namespace: helm-app
+  namespace: argocd
 spec:
   project: default
   source:
